fable/test/valid/data_13.f
      program prog
      dimension nums(2)
      data nums(1) /23/ nums(2) /34/
      write(6, *) nums(1), nums(2)
      end
