fable/test/semantic_error/calling_dimension.f
      program prog
      dimension nums(2)
      call nums(2)
      end
